kubernetes/home.vijayakumar.xyz/media/jellyseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
        - image: fallenbagel/jellyseerr:2.1.0
          imagePullPolicy: Always
          name: jellyseerr
          ports:
            - containerPort: 5055
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr
              subPath: config
      volumes:
        - name: jellyseerr
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
