kubernetes/home.vijayakumar.xyz/media/jellyseerr/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
        - image: fallenbagel/jellyseerr:2.1.0
          imagePullPolicy: Always
          name: jellyseerr
          ports:
            - containerPort: 5055
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr
              subPath: config
      volumes:
        - name: jellyseerr
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  ports:
    - name: web-tcp
      port: 5055
      protocol: TCP
      targetPort: 5055
    - name: web-udp
      port: 5055
      protocol: UDP
      targetPort: 5055
  selector:
    app: jellyseerr
  type: ClusterIP
  clusterIP: 10.43.242.12
