kubernetes/home.vijayakumar.xyz/media/jellyseerr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`jellyseerr.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
